--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 aiohttp==2.3.9
-SQLAlchemy==1.2
+SQLAlchemy==1.2.7
 psycopg2==2.7.3
 sqlalchemy-mptt==0.2.2
 lxml
@@ -8,3 +8,5 @@ requests
 passlib==1.7.1
 pyjwt==1.5.3
 aiotg==0.9.9
+Flask==1.0.2
+Flask-Admin==1.5.0
