Work on processing.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
   cron:
     build: .
     restart: always
-    command: sh -c "touch /var/log/cron.log && cron && tail -f /var/log/cron.log"
+    command: sh -c "touch /var/log/cron.log && crond && tail -f /var/log/cron.log"
     volumes:
       - .:/web
       - /var/log:/var/log
