--- a/alembic.ini
+++ b/alembic.ini
@@ -35,6 +35,7 @@ script_location = migrations
 # are written from script.py.mako
 # output_encoding = utf-8
 
+# TODO: set is without hardcoded value
 sqlalchemy.url = postgresql://bugaga:787898@db/bugagadb
 
 
