--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,20 @@
-aiohttp==2.3.9
+aiohttp==3.7.4
 SQLAlchemy==1.2.7
-psycopg2==2.7.3
+psycopg2==2.9.1
 sqlalchemy-mptt==0.2.2
-lxml==4.3.2
+lxml==4.6.3
 factory_boy
 requests==2.21.0
 passlib==1.7.1
 pyjwt==1.5.3
-aiotg==0.9.9
-Flask==1.0.2
-Flask-Admin==1.5.3
+aiotg==1.0.0
+Flask==2.0.1
+Flask-Admin==1.5.8
 alembic==1.0.7
 gensim==3.7.1
-gunicorn==19.9.0
+gunicorn==20.1.0
 boto3==1.9.115
-Pillow==5.4.1
+Pillow==8.3.2
 stop-words==2018.7.23
+numpy==1.21.2
+scikit-learn==0.24.2
